--- a/.github/workflows/ga2.yml
+++ b/.github/workflows/ga2.yml
@@ -6,6 +6,6 @@ jobs:
     env:
       test
       steps:
-        - name: 22f3001715@ds.study.iitm.ac.in
-          run: echo "Hello, world!"
+        name: 22f3001715@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
   
