--- a/.github/workflows/ga2.yml
+++ b/.github/workflows/ga2.yml
@@ -4,6 +4,6 @@ jobs:
   ga:  
     runs-on: ubuntu-latest
       steps:
-        name: 22f3001715@ds.study.iitm.ac.in
-        run: echo "Hello, world!"
+        - name: 22f3001715@ds.study.iitm.ac.in
+          run: echo "Hello, world!"
   
